[package]
name = "defaulthound"
version = "1.5.0"
edition = "2024"
description = "A batch scanner that hunts default/empty passwords across network services"
license = "MIT"
default-run = "defaulthound"

[[bin]]
name = "defaulthound"
path = "src/bin/defaulthound.rs"

[[bin]]
name = "defaulthound-gui"
path = "src/bin/defaulthound-gui.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

tokio-socks = "0.5"

# ── GUI (eframe/egui) ──
eframe = "0.31"
egui = "0.31"
rfd = "0.15"  # 原生文件对话框

[profile.release]
opt-level = 3
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
